spices/sqlite/tests/errors/sqlite-db-use-after-close.tur
;; U1 negative fixture: using a Db after db-close must be rejected under
;; -Xsubstructural. Db is :linear; its single consumption is db-close, and
;; db-exec borrows, so a query on a closed db is a use-after-free.
;;
;; Verify (from the sqlite spice root):
;;   tur check -Xsubstructural tests/errors/sqlite-db-use-after-close.tur
;;   => error [TUR-E0101]: linear value 'db' used after being consumed
;;
;; Violation lives in an uncalled defn (no main): without the flag the file
;; compiles and `tur test` treats it as a no-op pass, so CI stays green;
;; the flag check reports the error. Automated assertion awaits P5.

(defmodule sqlite_db_use_after_close_test
  (export)

(import sqlite/db :refer [Db db-open db-close db-exec])

(defn use-after-close [] : (Result int int)
  (let [db (ok-val (db-open ":memory:"))]
    (do
      (db-close db)               ;; single legal consumption
      (db-exec db "SELECT 1"))))  ;; ERROR TUR-E0101: borrow after consume

) ;; end defmodule sqlite_db_use_after_close_test
